Refined arrow key implementation with new buttons.